# snapguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
src/snapguard/: cli.py
